--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gsap": "^3.13.0",
     "react": "^19",
     "react-dom": "^19",
+    "react-responsive": "^10.0.1",
     "tailwindcss": "^4.0.6",
     "three": "^0.178.0"
   },
