--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bun-plugin-tailwind": "^0.0.14",
     "gsap": "^3.13.0",
     "react": "^19",
+    "react-countup": "^6.5.3",
     "react-dom": "^19",
     "react-responsive": "^10.0.1",
     "tailwindcss": "^4.0.6",
