--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "postdeploy": "echo 'Deployment complete!'"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@gsap/react": "^2.1.2",
     "@react-three/drei": "^10.4.4",
     "@react-three/fiber": "^9.2.0",
     "@react-three/postprocessing": "^3.0.4",
     "bun-plugin-tailwind": "^0.0.14",
+    "dotenv": "^17.2.0",
     "gsap": "^3.13.0",
     "react": "^19",
     "react-countup": "^6.5.3",
